<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_background" />

    <TextView
        android:id="@+id/hello_text_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="150dp"
        android:fontFamily="@font/andada"
        android:text="@string/helloText"
        android:textColor="@color/black"
        android:textSize="33dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/hello_text_rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/andada"
        android:text="@string/HelloTextRules"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25dp" />

    <LinearLayout
        android:id="@+id/startLayout"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btstart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_stroke_purple80_press"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/start"
            android:textSize="24dp"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btcont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_stroke_purple80_press"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_marginStart="15dp"
            android:text="@string/nextcontinue"
            android:textSize="24dp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <Button
        android:id="@+id/btexit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/exit"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text=""/>

</RelativeLayout>