<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/dialogfon"
    android:background="@drawable/dialogback"
    android:layout_gravity="center"
    android:scaleType="centerCrop"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/rulesmain"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textrules"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:fontFamily="@font/andada"
            android:text="@string/rulesgame"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btncontinue"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/button_stroke_purple80_press"
            android:layout_weight="13"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/nextcontinue"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_gravity="center"
            />
    </LinearLayout>


</LinearLayout>