<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_background" />

    <Button
        android:id="@+id/btback"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/back"
        android:text="" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        android:padding="20dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/equation1"
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:background="@drawable/style_stroke_equation"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="1 + 5"
            android:textColor="@color/black"
            android:textSize="55sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="55dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btLess"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/button_comparison"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/less"
                android:textColor="@color/black"
                android:textSize="57sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btEqual"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_comparison"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/equal"
                android:textColor="@color/black"
                android:textSize="57sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btMore"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_comparison"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/more"
                android:textColor="@color/black"
                android:textSize="57sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/equation2"
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:background="@drawable/style_stroke_equation"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="50 * 90"
            android:textColor="@color/black"
            android:textSize="55sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:paddingTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/totalScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="15dp"
            android:background="@drawable/style_total_score"
            android:fontFamily="@font/andada"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="50sp" />
    </LinearLayout>

</RelativeLayout>